<resources>
    <string name="app_name">BullyIF</string>
    <string name="digite_email">Digite o seu Email</string>
    <string name="digite_senha">Digite sua Senha</string>
    <string name="botao_logar">Logar</string>
    <string name="nao_tem_conta">Não tem conta? Cadastre-se</string>
    <string name="digite_nome">Digite seu nome</string>
    <string name="digite_matricula">Digite sua Matricula</string>
    <string name="text_cadastrar">Cadastrar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_batepapo">BatepapoActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_lista_denuncia">ListaDenuncia</string>
    <string name="title_activity_lista_denuncia2">ListaDenuncia2</string>
</resources>