<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cinzaclaro"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <View
        android:id="@+id/view"
        android:layout_width="411dp"
        android:layout_height="372dp"
        android:background="@color/verdePrincipal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="219dp"
        android:layout_height="240dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:srcCompat="@drawable/logoif" />

    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="317dp"
        android:layout_height="57dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="1dp"
        android:background="@drawable/retangulotext"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/retangulotext">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editLoginEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/retangulotext"
                android:hint="@string/digite_email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout10"
        android:layout_width="317dp"
        android:layout_height="53dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="1dp"
        android:background="@drawable/retangulotext"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout9">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/retangulotext">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editLoginSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/retangulotext"
                android:hint="@string/digite_senha"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="115dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="115dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="@color/verdeSecundario"
        android:onClick="validarAutenticacaoUsuario"
        android:text="@string/botao_logar"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout10" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="86dp"
        android:onClick="abrirTelaCadastro"
        android:text="@string/nao_tem_conta"
        android:textColor="@color/brancoGelo"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        tools:ignore="TouchTargetSizeCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>